# rstype

./: .gitignore  Cargo.toml  LICENSE  README.md  book.toml  build.rs  ideas.txt  problems.txt
.cargo/: config.toml
.github/workflows/: docs.yml  release.yml
doc/: history_recording.md  minimum_real_estate.md  shortcuts.md  status_bar.md  typing_content_sources.md
docs/: SUMMARY.md  book.toml  future_mode_ideas.md  introduction.md  maintainer_cicd.md  typing_content_sources.md
docs/src/: history_recording.md  introduction.md  shortcuts.md
src/: dict.rs  main.rs  train.rs  ui.rs  utils.rs  wikipedia.rs
