[package]
name = "rstype"
version = "0.1.1"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]
description = "Rust based typing trainer"
license = "MIT"
repository = "https://github.com/veltzer/rstype"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
